--- a/trunk/app/assets/stylesheets/application.css.erb
+++ b/trunk/app/assets/stylesheets/application.css.erb
@@ -10,6 +10,7 @@
  *= require facebox
  *= require jquery.zlzp.editor
  *= require jquery.zlzp.popupdiv.css
+ *= require cnu
  *= require_self
  */
 
