--- a/trunk/app/views/apidoc/asks.html.erb
+++ b/trunk/app/views/apidoc/asks.html.erb
@@ -74,7 +74,7 @@
          title: '如果通过内部推荐获得了一个offer，但是最终没有去，这种行为是否恰当？',
          user: ["SLUG","NAME"],
          answers_count: 1 },
-       { id: '4ecdd5e3d1212f766300160a', title: '求职者穿着西装会得到加分吗？', user: ["SLUG","NAME"], answers_count: 1 },
+       { id: '4ecdd5e3d1212f766300160a', title: '解题者穿着西装会得到加分吗？', user: ["SLUG","NAME"], answers_count: 1 },
        { id: '4ecdd541062a78726f00158c', title: '计算机专业毕业生想往产品经理发展的应培养哪些方面的才能？', user: ["SLUG","NAME"], answers_count: 1 },
        { id: '4ecdd3fd062a78727b001549', title: '应聘技术职位，如何填写自我介绍？', user: ["SLUG","NAME"], answers_count: 1 },
        { id: '4ecdd335062a78727b001538', title: '非IT专业的人，毕业进入IT领域的机会有多大？', user: ["SLUG","NAME"], answers_count: 1 },
