--- a/trunk/app/views/apidoc/asks_newbie.html.erb
+++ b/trunk/app/views/apidoc/asks_newbie.html.erb
@@ -1,5 +1,5 @@
 
-<h1 id="section">课件交流系统: Kejian.TV开放应用程序接口 - Kejian.TV广场上的热门问题</h1>
+<h1 id="section">课件交流系统: Kejian.TV开放应用程序接口 - 问答广场上的热门问题</h1>
 
 <h2>认证级别</h2>
 <p>只需提供client_id</p>
@@ -39,7 +39,7 @@ Set-Cookie: _quora_session=BAh7BkkiD3Nlc3Npb25faWQGOgZFRkkiJTc1Mjg2OWQxNzZiZjJkO
        user: ["SLUG","NAME"],
        answers_count: 6 },
      { id: '4e669b316130032144000088', title: '环境工程毕业生的就业方向和现状，工资水平', user: ["SLUG","NAME"], answers_count: 7 },
-     { id: '4e930c5d6130030ed10000e7', title: ' 自考文凭与求职', user: ["SLUG","NAME"], answers_count: 8 },
+     { id: '4e930c5d6130030ed10000e7', title: ' 自考文凭与解题', user: ["SLUG","NAME"], answers_count: 8 },
      { id: '4e66d0a06130032a2500000a', title: '本科毕业后,在南昌五百一月(不包吃住)要不要去做???', user: ["SLUG","NAME"], answers_count: 7 },
      { id: '4e6fd89c61300334de00057c', title: '我该辞职吗？\r\n', user: ["SLUG","NAME"], answers_count: 6 },
      { id: '4e66cf746130032a25000002', title: '数学专业毕业生可否做HR？', user: ["SLUG","NAME"], answers_count: 6 },
@@ -56,7 +56,7 @@ Set-Cookie: _quora_session=BAh7BkkiD3Nlc3Npb25faWQGOgZFRkkiJTc1Mjg2OWQxNzZiZjJkO
        user: ["SLUG","NAME"],
        answers_count: 11 },
      { id: '4e697c9061300334de000225', title: '网编有前途么？整天复制粘贴的那种？', user: ["SLUG","NAME"], answers_count: 6 },
-     { id: '4e91e086613003640f000223', title: '外地来京求职，现居地是填北京好呢还是填老家好哦？', user: ["SLUG","NAME"], answers_count: 13 },
+     { id: '4e91e086613003640f000223', title: '外地来京解题，现居地是填北京好呢还是填老家好哦？', user: ["SLUG","NAME"], answers_count: 13 },
      { id: '4e9847cb6130033300000194', title: '我是工作2年的小职员，哪个英语培训最适合我', user: ["SLUG","NAME"], answers_count: 6 },
      { id: '4e9ca31d6130034ae10000c0', title: '面试通用的几个问题', user: ["SLUG","NAME"], answers_count: 8 },
      { id: '4e6fafa261300334f60004d6', title: '辞职，遇到不放人，怎么办？\r\n', user: ["SLUG","NAME"], answers_count: 11 },
