--- a/trunk/app/views/apidoc/asks_topic.html.erb
+++ b/trunk/app/views/apidoc/asks_topic.html.erb
@@ -101,7 +101,7 @@ Set-Cookie: _quora_session=BAh7BkkiD3Nlc3Npb25faWQGOgZFRkkiJTc1Mjg2OWQxNzZiZjJkO
        user: ["SLUG","NAME"],
        answers_count: 0 },
      { id: '4ec4e202d1212f37720017a6',
-       title: '张老师您好，从《职来职往》上看到你，对你的达人形象非常深刻，我是一名2012年的会计学专业的应届毕业生，最近有很多企业招聘，我也积极地去应聘，可是都未能顺利找到一份合适的工作，可能在简历和面试技巧方面有很多不足的地方，对写求职信方面也大有欠缺，希望老师能给予我一些建议和帮助，非常感谢，期待您的回复！',
+       title: '张老师您好，从《职来职往》上看到你，对你的达人形象非常深刻，我是一名2012年的会计学专业的应届毕业生，最近有很多企业招聘，我也积极地去应聘，可是都未能顺利找到一份合适的工作，可能在简历和面试技巧方面有很多不足的地方，对写解题信方面也大有欠缺，希望老师能给予我一些建议和帮助，非常感谢，期待您的回复！',
        user: ["SLUG","NAME"],
        answers_count: 1 },
      { id: '4ec45a5a062a783c37000f64',
@@ -109,7 +109,7 @@ Set-Cookie: _quora_session=BAh7BkkiD3Nlc3Npb25faWQGOgZFRkkiJTc1Mjg2OWQxNzZiZjJkO
        user: ["SLUG","NAME"],
        answers_count: 1 },
      { id: '4ec3d9e3d1212f3772000cae',
-       title: '老师，您好！很欣赏您在“职职”上的达人形象。我是农科院校的行政管理本科应届毕业生，来我们学校招聘的企业不少，但好像都是来招聘食品、机电、水土等专业的，我们专业对口的行政助理岗位基本上没人回应，使我的求职有些迷茫。想到行政助理发展前景一般，现在我都想调整方向，改成销售，希望您指点一下，谢谢！',
+       title: '老师，您好！很欣赏您在“职职”上的达人形象。我是农科院校的行政管理本科应届毕业生，来我们学校招聘的企业不少，但好像都是来招聘食品、机电、水土等专业的，我们专业对口的行政助理岗位基本上没人回应，使我的解题有些迷茫。想到行政助理发展前景一般，现在我都想调整方向，改成销售，希望您指点一下，谢谢！',
        user: ["SLUG","NAME"],
        answers_count: 1 },
      { id: '4ec3a5ebd1212f3772000a9f',
@@ -122,7 +122,7 @@ Set-Cookie: _quora_session=BAh7BkkiD3Nlc3Npb25faWQGOgZFRkkiJTc1Mjg2OWQxNzZiZjJkO
        user: ["SLUG","NAME"],
        answers_count: 1 },
      { id: '4ec266f7062a783c370001cf', title: '企业招聘最看重面试者哪方面的能力？', user: ["SLUG","NAME"], answers_count: 0 },
-     { id: '4ec2375cd1212f377e000054', title: '招聘经理如何度过职场瓶颈期？', user: ["SLUG","NAME"], answers_count: 0 },
+     { id: '4ec2375cd1212f377e000054', title: '招聘经理如何度过师生瓶颈期？', user: ["SLUG","NAME"], answers_count: 0 },
      { id: '4ec1c5cf062a781a27001567',
        title: '您好老师 我是应届毕业生学的是服装设计 现处于实习阶段了 我想去大公司实习或是从服装设计师助理干起 但我看过很多招聘似乎大部分都是小型的加工公司 怎样才能在第一份工作就有个好的开头 我只想求发展 。还有就是我对自己所学的专业不是那么热衷 处于不喜欢也不讨厌的位置 我总是在找我自己最喜欢的事 想为之奋斗。我希望老师给我指出一条更明确的路。以及工作地点的问题，我自己是非常喜欢北京。',
        user: ["SLUG","NAME"],
