--- a/trunk/app/views/apidoc/doing.html.erb
+++ b/trunk/app/views/apidoc/doing.html.erb
@@ -49,7 +49,7 @@
          target_id: '4e654fd16130031869000041' },
        { id: '4e65500b6130031851000041', title: '7874612313', user_id: '4e654b106130031869000034', target_id: '4e654fd16130031869000041' },
        { id: '4e65500b6130031851000042',
-         title: '<span class="Apple-style-span" style="color: rgb(68, 68, 68); font-family: simsun, Arial, Helvetica, sans-serif; line-height: 21px; "><p style="word-wrap: break-word; font-size: 14px; line-height: inherit; ">恩，怎么说呢，我至今工作三年，我也有过不融于团队的经历，所以我理解你的心态。不过你的帖子叙说有点笼统，我不知道你在什么样的工作环境之中，而且你是不是性格有点内向呢。其实我觉得新人和职场人并没有很大的鸿沟，关键是你自己要积极和和同事去交流，去接触。我的建议，你不要太着急，作为新人，多观察，多听，你慢慢的会好起来的。</p><div><br></div></span>',
+         title: '<span class="Apple-style-span" style="color: rgb(68, 68, 68); font-family: simsun, Arial, Helvetica, sans-serif; line-height: 21px; "><p style="word-wrap: break-word; font-size: 14px; line-height: inherit; ">恩，怎么说呢，我至今工作三年，我也有过不融于团队的经历，所以我理解你的心态。不过你的帖子叙说有点笼统，我不知道你在什么样的工作环境之中，而且你是不是性格有点内向呢。其实我觉得新人和师生人并没有很大的鸿沟，关键是你自己要积极和和同事去交流，去接触。我的建议，你不要太着急，作为新人，多观察，多听，你慢慢的会好起来的。</p><div><br></div></span>',
          user_id: '4e654b106130031869000034',
          target_id: '4e65500b6130031851000040' },
        { id: '4e655061613003185d00003f',
