--- a/trunk/app/views/apidoc/topics_get_suggest_topics.html.erb
+++ b/trunk/app/views/apidoc/topics_get_suggest_topics.html.erb
@@ -17,9 +17,9 @@ http://api.kejian.tv/topics/职业规划/suggest_topics?client_id=4f97b5f9d1212f
   [ '面试',
     '人力资源',
     '薪酬',
-    '职场',
+    '师生',
     '福利待遇',
-    '求职',
+    '解题',
     '简历',
     '晋升',
     '跳槽',
@@ -58,7 +58,7 @@ http://api.kejian.tv/topics/职业规划/suggest_topics?client_id=4f97b5f9d1212f
     '毕业',
     '互联网',
     '应聘',
-    '职场礼仪',
+    '师生礼仪',
     '校园招聘',
     'Kejian.TV',
     '网申',
@@ -93,7 +93,7 @@ http://api.kejian.tv/topics/职业规划/suggest_topics?client_id=4f97b5f9d1212f
     '托业',
     '面试礼仪',
     '资源整合',
-    '职场人',
+    '师生人',
     '招聘',
     '就业地点',
     '工作地点',
@@ -113,7 +113,7 @@ http://api.kejian.tv/topics/职业规划/suggest_topics?client_id=4f97b5f9d1212f
     '文凭',
     '投简历',
     '社保',
-    '职场新人',
+    '师生新人',
     '问题',
     'HR',
     '技术',
