--- a/trunk/app/views/apidoc/user_show_current_user.html.erb
+++ b/trunk/app/views/apidoc/user_show_current_user.html.erb
@@ -90,7 +90,7 @@ curl -i "http://api.kejian.tv/users/?current_user=1&token=af2f56ee6f9eca2939dcdc
        '实习生',
        'Kejian.TV',
        '网申',
-       '职场礼仪',
+       '师生礼仪',
        '公务员',
        'f3132',
        '123',
