--- a/trunk/app/views/application/_qua_footer.html.erb
+++ b/trunk/app/views/application/_qua_footer.html.erb
@@ -7,15 +7,13 @@
   					<div class="e_col footer_links w8">
   						<div id="ld_ExQemT_10917">
   							<ul class="nav_list">
-  								<li class="about"><a href="/about">返回首页</a></li>
-  								<li class="jobs"><a href="/jobs">功能简介</a></li>
-  								<li class="privacy"><a href="/about/privacy">开发博客</a></li>
-  								<li class="tos"><a href="/about/tos">关于我们</a></li>
-  								<li class="tos"><a href="/about/tos">法律声明</a></li>
+  								<li class="about"><a href="/">返回首页</a></li>
   								<li><span class="bullet"> • </span></li>
-  								<li class="help"><a href="/Getting-Started-on-Quora/I-need-help-on-Quora-What-should-I-do">团队后台</a></li>
+  								<li class="tos"><a href="/welcome/about">关于我们</a></li>
   								<li><span class="bullet"> • </span></li>
-  								<li class="shuffle"><a href="/shuffle">手气不错</a></li>
+  								<li class="help"><a href="/cpanel">团队后台</a></li>
+  								<li><span class="bullet"> • </span></li>
+  								<li class="shuffle"><a href="/welcome/shuffle">手气不错</a></li>
   							</ul>
   						</div>
   					</div>
