--- a/trunk/app/views/home/newbie.html.erb
+++ b/trunk/app/views/home/newbie.html.erb
@@ -5,8 +5,8 @@
 <%if user_signed_in?%>
 <header class="mainContentHeader">
 						<section>
-							<em><%= current_user.name%></em> Kejian.TV-职场互动问答平台<br>
-							<span class="fc999">关注你感兴趣的内容，开始Kejian.TV吧！</span>
+							<em><%= current_user.name%></em> 首都师范大学 - 师生互动问答平台<br>
+							<span class="fc999">关注你感兴趣的内容，开始与大家交流吧！ </span>
 						</section>
 						<div class="dline mt10"></div>
 					</header>
