--- a/trunk/app/views/layouts/apidoc.html.erb
+++ b/trunk/app/views/layouts/apidoc.html.erb
@@ -64,7 +64,7 @@
               <h3><a href="#" class="js-expand-btn collapsed">&nbsp;</a><a href="/apidoc/4topics">话题相关</a></h3>
               <ul class="js-guides">
 <li><a href="/apidoc/topics">所有话题</a></li>
-<li><a href="/apidoc/topics_newbie">Kejian.TV广场上的热门话题</a></li>
+<li><a href="/apidoc/topics_newbie">问答广场上的热门话题</a></li>
 <li><a href="/apidoc/topics_get_suggest_topics">获得某话题的相关话题</a></li>
 <li><a href="/apidoc/topics_get_suggest_experts">获得某话题的相关专家</a></li>
 <li><a href="/apidoc/user_update_follow_topic">关注/取消关注话题</a></li>
@@ -77,7 +77,7 @@
 <li><a href="/apidoc/asks">所有问题</a></li>
 <li><a href="/apidoc/asks_unanswered">所有等待回答的问题</a></li>
 <li><a href="/apidoc/asks_topic">某话题下的所有问题</a></li>
-<li><a href="/apidoc/asks_newbie">Kejian.TV广场上的热门问题</a></li>
+<li><a href="/apidoc/asks_newbie">问答广场上的热门问题</a></li>
 <li><a href="/apidoc/ask_show">获取问题详情</a></li>
 <li><a href="/apidoc/ask_update">修改某个问题</a></li>
 <li><a href="/apidoc/ask_answer_this">为某个问题添加答案</a></li>
