--- a/trunk/app/views/layouts/application__ibeike.html.erb
+++ b/trunk/app/views/layouts/application__ibeike.html.erb
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>iBeiKe课件共享系统（OCW）</title>
+	<title>iBeiKe课件共享系统（OCW） - <%= @seo[:title] %></title>
   <%= stylesheet_link_tag "ibeike", :media => "all" %>	 
   <%= javascript_include_tag "ibeike" %>  
   <%= csrf_meta_tag %>
