--- a/trunk/app/views/mobile/register.erb
+++ b/trunk/app/views/mobile/register.erb
@@ -15,7 +15,7 @@
         <label for="password2" class="ui-input-text">确认密码</label>
         <input type="password" name="password2" id="password2" placeholder="" class="ui-input-text ui-body-c ui-corner-all ui-shadow-inset">
     </div>
-    <div data-role="fieldcontain">
+    <div data-role="fieldcontain" style="display:none">
         <fieldset data-role="controlgroup" data-type="vertical">
             <legend>
                 
@@ -24,16 +24,16 @@
             <label for="accept">
                 我接受 Kejian.TV用户协议 和 课件交流系统隐私协议
             </label>
-            
+        </fieldset>            
     </div>
-        </fieldset>
+
             <div class="text-center" style="margin:10px 0;">
                     <a href="http://kejian.tv/agreement/" target="_blank">Kejian.TV用户协议</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jobseeker.kejian.tv/zhaopin/aboutus/secrecy.html" target="_blank">课件交流系统隐私协议</a>
             </div>
     <button type="submit" data-theme="a" class="ui-btn-hidden" aria-disabled="false">注册</button>
     </form> 
     <div class="text-center" style="margin:10px 0;">
-		已有课件交流系统账号？<a href="/mobile/login/">直接登录</a>
+		已有互动问答平台账号？<a href="/mobile/login/">直接登录</a>
 	</div>
 </div>
 
