--- a/trunk/public/css_ie.css
+++ b/trunk/public/css_ie.css
@@ -36,7 +36,7 @@ h6 {
 	padding-left:10px;
 }
 
-/* Kejian.TV广场 关注全部按钮位置fix */
+/* 问答广场 关注全部按钮位置fix */
 .hotTopicTable .nBtnFocusAll {
 	position:relative;
 	top:-28px;
