--- a/trunk/app/views/apidoc/index.html.erb
+++ b/trunk/app/views/apidoc/index.html.erb
@@ -2,9 +2,9 @@
 <h1 id="section">课件交流系统: Kejian.TV开放应用程序接口</h1>
 
 <p>通过调用Kejian.TV开放应用程序接口（以下简称Kejian.TVAPI），
-您的应用程序可以轻松获取最新的职场资讯，
-及顶尖HR专家分享的各类职场问题的辛辣点评。
-Kejian.TVAPI同时为课件交流系统网站用户提供一个职场问题知识库的基础服务。</p>
+您的应用程序可以轻松获取最新的师生资讯，
+及顶尖HR专家分享的各类师生问题的辛辣点评。
+Kejian.TVAPI同时为课件交流系统网站用户提供一个师生问题知识库的基础服务。</p>
 
 <p>Kejian.TVAPI及其文档由李云龙、潘旻琦设计编写。</p>
 
