--- a/trunk/app/views/apidoc/user_show_answered.html.erb
+++ b/trunk/app/views/apidoc/user_show_answered.html.erb
@@ -88,7 +88,7 @@ http://api.kejian.tv/users/angelacai/answered?client_id=4f97b5f9d1212f1d7e000002
          votes: [Object] },
        { _id: '4ed33bd1d1212f268e00005e',
          ask_id: '4ed33b71062a78726f002832',
-         body: 'Kejian.TV是课件交流系统推出的一个职场领域的web2.0问答平台。',
+         body: 'Kejian.TV是课件交流系统推出的一个师生领域的web2.0问答平台。',
          comments_count: 0,
          created_at: '2011-11-28T15:44:17+08:00',
          deleted: 0,
@@ -200,7 +200,7 @@ http://api.kejian.tv/users/angelacai/answered?client_id=4f97b5f9d1212f1d7e000002
          votes: [Object] },
        { _id: '4ed33bf6d1212f2682000052',
          ask_id: '4ed33bb9062a78726f002838',
-         body: '<div>对于职场人，当你在求职或工作过程中遇到问题时，能够在Kejian.TV上得到专业的解答。</div><div>对于满腹经纶的专家，你可以在Kejian.TV帮助大家答疑解惑，同时展示自己。</div>',
+         body: '<div>对于师生人，当你在解题或工作过程中遇到问题时，能够在Kejian.TV上得到专业的解答。</div><div>对于满腹经纶的专家，你可以在Kejian.TV帮助大家答疑解惑，同时展示自己。</div>',
          comments_count: 0,
          created_at: '2011-11-28T15:44:55+08:00',
          deleted: 0,
