--- a/trunk/app/views/devise/registrations/new__cnu.html.erb
+++ b/trunk/app/views/devise/registrations/new__cnu.html.erb
@@ -16,30 +16,22 @@
       </div>
     <% else %>
       <h1>注册新用户</h1>
-      <p style="color:green; margin-bottom:10px;">目前是临时开放注册期间，如果你还没有<%= Setting.app_name %>账号的话，赶紧注册吧！</p>
-      <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name) ) do |f| %>
-        <%= render "shared/error_messages", :target => resource %> 
+      <p style="color:green; margin-bottom:10px;">为了方便与其他同学或老师沟通，请务必填写真实姓名。</p>
+      <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html=>{:id=>'submit_btn_form',:autocomplete=>"off"} ) do |f| %>
         <%= f.input :name, :label => "姓名（注册后不可更改）" %>
         <%= f.input :email, :label => "邮箱" %>
         <%= f.input :password, :as => :password, :label => "密码" %>
         <%= f.input :password_confirmation, :as => :password, :label => "确认密码"  %>
-        <div class="actions"><button type="submit" class="button submit">提交注册信息</button></div>
+        <div class="btnNormalGreen" style="margin-top:8px;margin-bottom:18px" onclick="document.getElementById('submit_btn_form').submit()"><span>提交注册信息</span></div>
       <% end %>
     <% end %>
   </div>
 </div>
 <%= content_for :sidebar do %>
-  <div class="box">
+  <div class="box" style="padding-left:18px;padding-top:20px">
     <h2>已经有账号了？</h2>
     <p style="line-height:20px;">
     <%= render :partial => "devise/shared/links" %>
     </p>
-  </div>
-  <div class="box">
-    <h2>关于注册</h2>
-    <div class="inner">
-      <%= Setting.app_name %>本身需要邀请才可以注册的，但是我们会偶尔在一些特别的日子临时性的开放注册。<br />
-      如果你看到了这个页面，那恭喜你，赶紧注册吧，如果你还没有<%= Setting.app_name %>账号的话。
-    </div>
   </div>
 <% end %>
