--- a/trunk/app/views/home/about.mobile.erb
+++ b/trunk/app/views/home/about.mobile.erb
@@ -7,7 +7,7 @@
 <div id="about">
   <h1>关于Kejian.TV</h1>
   <div class="md_body">
-    我们立志构建一个开放的求职问答社区站点。<br />
+    我们立志构建一个开放的解题问答社区站点。<br />
   </div>
   <h2>团队成员</h2>
   <div class="team">
