--- a/trunk/app/views/home/mobile.html.erb
+++ b/trunk/app/views/home/mobile.html.erb
@@ -4,10 +4,10 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=960"/>
     <meta http-equiv="x-dns-prefetch-control" content="off"/>
-    <meta name="keywords" content="职业规划,问答,职场,加薪,Kejian.TV," />
-    <meta name="description" content="Kejian.TV是课件交流系统旗下的职场领域问答交流平台.Kejian.TV助你制定专业的职业规划,提供求职指导,分享职场知识,赢取工作机会.Kejian.TV拥有大批职场专家,行业资深人士,知名企业HR,同行,校友." />
+    <meta name="keywords" content="职业规划,问答,师生,加薪,Kejian.TV," />
+    <meta name="description" content="Kejian.TV是课件交流系统旗下的师生领域问答交流平台.Kejian.TV助你制定专业的职业规划,提供解题指导,分享师生知识,赢取工作机会.Kejian.TV拥有大批师生专家,行业资深人士,知名企业HR,同行,校友." />
     <meta property="wb:webmaster" content="8511185f3b58f41f" />
-    <title>Kejian.TV-课件交流系统旗下职场问答交流平台</title>
+    <title>Kejian.TV-课件交流系统旗下师生问答交流平台</title>
     <link rel="shortcut icon" href="/favicon.ico?v=003" /> 
     <meta charset="UTF-8">
     <%= csrf_meta_tag %>
@@ -57,7 +57,7 @@
         <% @no_header ||= ['devise-sessions_new','registrations_new'].include?("#{params[:controller].parameterize}_#{params[:action].parameterize}") %>
         <% unless @no_header %>
           <div class="searchbox">
-            <input placeholder="搜索求职、职场疑问" id="searchInput">
+            <input placeholder="搜索解题、课程疑问" id="searchInput">
           </div>
           <%= content_for :butt2 do %>
             Asks.completeAll($("#searchInput"));
