--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
        More info: h5bp.com/i/378 -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>课件交流系统 - <%= @seo[:title] %><%=yield :title%></title>
+  <title>课件交流系统 - <%= @seo[:title] %></title>
 
   <meta name="keywords" content="<%= @seo[:keywords] %>">
   <meta name="description" content="<%= @seo[:description] %>">
