--- a/trunk/app/views/layouts/application_wendao.mobile.erb
+++ b/trunk/app/views/layouts/application_wendao.mobile.erb
@@ -59,7 +59,7 @@
              <div data-role="navbar" data-iconpos="top" id="siteNavbar">
                 <ul>
                     <li><a href="/?force_mobile=1" data-icon="wdhome" id="gotohome">首页</a></li>
-                    <li><a href="/newbie?force_mobile=1" data-icon="wdsquare" id="gotosquare">广场</a></li>
+                    <li><a href="/newbie?force_mobile=1" data-icon="wdsquare" id="gotosquare">问答广场</a></li>
                     <li><a href="<%= current_user.blank? ? '/mobile/login' : '/asks/new?force_mobile=1' %>" data-icon="search" id="gotoask">提问</a></li>
                     <% cnt = current_user.blank? ? 0 : current_user.notifications.unread.count %>
                     <li><a href="<%= current_user.blank? ? '/mobile/login' : '/mobile/notifications?force_mobile=1' %>" data-icon="back" id="gotonotify">通知</a><%if cnt>0%><span class="notifies"><%=cnt%></span><%end%></li>
