--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
       </form>
       <div class="navigation">
         <ul>
-
+          <li class="browse"><a href="<%= new_ask_path %>" class="lh39 pa0" id="core_addtext_wrap">我要提问</a></li>
           <li class="upload"><a href="<%= new_courseware_path %>" class="lh39 pa0" id="core_addtext_wrap">我要上传</a></li>
         </ul>
         <div id="amazing-shadow"></div>
